--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -3,12 +3,14 @@
   padding-bottom: 40px;
   position: absolute;
   z-index: 2;
+  width: 100%;
 }
 .container {
 }
 .header-nav {
   display: flex;
-  gap: 370px;
+  gap: 300px;
+  align-items: center;
 }
 .header-logo {
   font-size: 17px;
@@ -16,12 +18,16 @@
 }
 .header-nav-list {
   display: flex;
-  gap: 40px;
+  gap: 45px;
 }
 .header-nav-item {
 }
 .header-nav-link {
   font-size: 17px;
-  line-height: 20px;
+  line-height: 1.17;
+  font-weight: 700;
   color: #222222;
+}
+.header-nav-right {
+  color: #ffffff;
 }
