--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,20 +1,23 @@
 .hero {
-  background-color: #f6ddcc;
+  background-color: #fbeee6;
 }
 .hero-content-wrap {
   display: flex;
   //   gap: 90px;
   position: relative;
   z-index: 1;
+  background-image: url(../images/woman.png);
+  background-repeat: no-repeat;
+  background-position: 20px 200px;
 }
 .hero-title {
   font-family: "Shantell Sans", cursive;
   font-weight: 300;
-  font-size: 100px;
+  font-size: 90px;
   line-height: 126px;
-  padding-top: 100px;
-  padding-left: 140px;
-  padding-right: 50px;
+  padding-top: 250px;
+  padding-left: 10px;
+  //   padding-right: 50px;
 
   //   position: absolute;
   //   z-index: 10;
@@ -29,7 +32,7 @@
   line-height: 182px;
   text-align: right;
   color: #ffffff;
-  //   transform: rotate(5.54deg);
+  top: 335px;
 }
 .hero-img {
   //   margin-left: 730px;
